# backend

./: Dockerfile  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run-tests.sh
.github/workflows/: tests.yml
src/: app.py  config.py  database.py  logger.py  main.py  queue.py  service.py  websocket_manager.py
src/auth/: exceptions.py  jwt_bearer.py  utils.py
src/consumer/: dependencies.py  models.py  router.py  service.py
src/order/: dependencies.py  models.py  router.py  schema.py  service.py  utils.py
tests/test_consumer/: conftest.py  test_router.py
tests/test_vendor/: conftest.py  test_change_status.py  test_create_vendor.py  test_get_vendor.py  test_menu.py  test_orders.py
